--- a/treb-grid/style/note.scss
+++ b/treb-grid/style/note.scss
@@ -25,7 +25,7 @@
   border: 1px solid #ddd;
   color: #333;
   background: #fff;
-  font-size: 11.5pt;
+  font-size: 10.5pt;
 
 
 }
